Fixed table selection background for blurred editor.

--- a/plugins/tabletools/styles/tabletools.css
+++ b/plugins/tabletools/styles/tabletools.css
@@ -9,7 +9,7 @@
 }
 
 .cke_table-faked-selection {
-	background: darkgray;
+	background: darkgray !important;
 	color: black;
 }
 .cke_table-faked-selection a {
